tests/NormalTests/paczka1/fuzzy1/98026263.err
Error in line 7: dWz1iPdxCIQ A868 41,5
Error in line 4: SX5fD A560 41,0
Error in line 15: dWz1iPdxCIQ A560 44,6
Error in line 21: dWz1iPdxCIQ A766 57,2
Error in line 14: A868 A868 36,4
Error in line 29: A868 A560 52,5
